opac/htdocs/opac-tmpl/temas/default/includes/opac.css
/* ... */
.main-subcontent .loginform fieldset {width:160px;
 border:none;
}
.main-subcontent .loginform label.top {float:left;
 width:125px;
 margin:0 0 2px 0;
 font-size:110%;
}
.main-subcontent .loginform label.right {float:left;
 width:125px;
 margin:5px 0 0 0;
 padding:0 0 0 3px;
 /*IE6*/;
 font-size:110%;
}
.main-subcontent .loginform input.field {width:158px;
 margin:0 0 5px 0;
 padding:0.1em 0 0.2em 0 !important /*Non-IE6*/;
 padding:0.2em 0 0.3em 0 /*IE6*/;
 border:solid 1px rgb(200,200,200);
 font-family:verdana,arial,sans-serif;
 font-size:110%;
}
.main-subcontent .loginform input.checkbox {float:left;
 margin:5px 0 0 0 !important /*Non-IE6*/;
 margin:2px 0 0 -3px /*IE6*/;
 border:none;
}
.main-subcontent .loginform input.button {float:left;
 width:5.0em;
 margin:10px 0 5px 0;
 padding:1px;
 background:rgb(230,230,230);
 border:solid 1px rgb(150,150,150);
 text-align:center;
 font-family:verdana,arial,sans-serif;
 color:rgb(150,150,150);
 font-size:110%;
}
.main-subcontent .loginform input.button:hover {cursor:pointer;
 border:solid 1px rgb(80,80,80);
 background:rgb(220,220,220);
 color:rgb(80,80,80);
}

.main-subcontent .searchform {width:160px;
 margin:0 10px 0 10px;
}
.main-subcontent .searchform fieldset {border:none;
}
.main-subcontent .searchform input.field {float:left;
 width:158px;
 padding:0.1em 0 0.2em 0 !important /*Non-IE6*/;
 padding:0.2em 0 0.3em 0 /*IE6*/;
 border:1px solid rgb(200,200,200);
 font-family:verdana,arial,sans-serif;
 font-size:120%;
}
.main-subcontent .searchform input.button {float:left;
 width:3.0em;
 margin-top: 0.5em;
 padding:1px;
 background:rgb(230,230,230);
 border:solid 1px rgb(150,150,150);
 text-align:center;
 font-family:verdana,arial,sans-serif;
 color:rgb(150,150,150);
 font-size:120%;
}
.main-subcontent .searchform input.button:hover {cursor:pointer;
 border:solid 1px rgb(80,80,80);
 background:rgb(220,220,220);
 color:rgb(80,80,80);
}



/* FORMULARIO RECOMENDACION */

.recomendacionform {width:114%;
 margin:2.0em 0 0 0;
 padding:10px 10px 0 10px;
 border:1px solid #4E6595;
 background-color:rgb(244,244,244);
}
.recomendacionform fieldset {padding:20px 0 0 0 !important /*Non-IE6*/;
 padding:0 /*IE6*/;
 margin:0 0 20px 0;
 border:solid 1px rgb(220,220,220);
}
.recomendacionform fieldset legend {margin:0 0 0 5px !important /*Non-IE*/;
 margin:0 0 20px 5px /*IE6*/;
 padding:0 2px 0 2px;
 color:rgb(80,80,80);
 font-weight:bold;
 font-size:130%;
}
.recomendacionform label.left {float:left;
 width:24%;
 margin:0 0 0 10px;
 padding:2px;
 font-size:110%;
}
.recomendacionform select.combo {width:175px;
 padding:2px;
 border:solid 1px rgb(200,200,200);
 font-family:verdana,arial,sans-serif;
 font-size:110%;
}
.recomendacionform input.field {width:275px;
 padding:2px;
 border:solid 1px rgb(200,200,200);
 font-family:verdana,arial,sans-serif;
 font-size:110%;
}
.recomendacionform textarea {width:275px;
 padding:2px;
 border:solid 1px rgb(200,200,200);
 font-family:verdana,arial,sans-serif;
 font-size:110%;
}
.recomendacionform input.button {float:right;
 width:9.0em;
 margin-right:20px;
 padding:1px !important /*Non-IE6*/;
 padding:0 /*IE6*/;
 background:rgb(230,230,230);
 border:solid 1px rgb(150,150,150);
 text-align:center;
 font-family:verdana,arial,sans-serif;
 color:rgb(150,150,150);
 font-size:110%;
}*/
.recomendacionform input.button:hover {cursor: pointer;
 border:solid 1px rgb(80,80,80);
 background:rgb(220,220,220);
 color:rgb(80,80,80);
}
.recomendacionform table{ width: 95%;
} 


/********************/
/*  COMMON CLASSES  */
/********************/
.main img {clear:both;
 float:left;
 margin:3px 10px 7px 0;
 padding:1px;
 border:1px solid rgb(150,150,150);
}
.main img.center {clear:both;
 float:none;
 margin:0;
 padding:1px;
 border:1px solid rgb(150,150,150);
}
.main img.right {clear:both;
 float:right;
 margin:3px 0 7px 10px;
 padding:1px;
 border:1px solid rgb(150,150,150);
}

.main a {color:rgb(70,122,167);
 font-weight:bold;
 text-decoration:none;
}
.main-content h1 a {color:#4E6595;
 font-weight:normal;
 text-decoration:none;
 margin:20px;
 }
.main a:hover {color:rgb(42,90,138);
 text-decoration:underline;
}
.main a:visited {color:rgb(42,90,138);
}

.main a img {border:solid 1px rgb(150,150,150);
}
.main a:hover img {border:solid 1px rgb(220,220,220);
}

.message_text{
  font-size: 17px;

}

.highlighted{
  color:#a52612;

  font-weight: bold;

}

.review p{
    margin-left: 10px;

    font-family:"Arial";

    font-size: 20px;

    text-align: justify;

    width: 98%;

}

.review h2{
    font-size: 20px;

}

.user_cite{
    font-size: 20px;

    font-style: italic;

    color:blue;

}

.user_cite_other{
    font-size: 16px;

    font-style: italic;

    color:black;

}

/* mensajes de error */
em.error_adv{background:transparent url(../imagenes/error.gif) no-repeat scroll 0 0;
padding-left:16px;
color:red;
}
div.error_adv{background:transparent url(../imagenes/error.gif) no-repeat scroll 0 0;
padding-left:16px;
}
label.error_adv{background:transparent url(../imagenes/error.gif) no-repeat scroll 0 0;
padding-left:16px;
width:auto;
}


.suggested_search{
    color: blue;

    font-weight: bold;

    font-size: 15px;

}

/* .cargando{background-image:url(../imagenes/loaders/loader_para_div.gif);
background-repeat:no-repeat;
background-position:center center;
height:auto;
min-height:30px;
} */
.cargando {
    background-image: url(../imagenes/loaders/ajax-loader.gif);

    background-repeat: no-repeat;

    background-position: center center;

    height: auto;

    min-height: 30px;

}


#ajax_state {
    display: none;

    background: url(../imagenes/loaders/ajax-loader.gif) no-repeat scroll
        center;

    height: 35px;

    position: relative;

    margin: 5px
}

#ajax-indicator {
    /* background-color:#EEEEEE;
border:1px solid #BBBBBB;
*/
    font-weight: bold;

    left: 12%;

    padding: 0.6em;

    position: absolute;

    text-align: center;

    top: -18%;

    width: 20%;

    z-index: 100;

}
/* ... */

